Closed Bug 553603 Opened 14 years ago Closed 14 years ago

D2D black screen on "leftalt+enter" on awesomebar

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: shift9999, Assigned: bas.schouten)

References

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a4pre) Gecko/20100319 Minefield/3.7a4pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a4pre) Gecko/20100319 Minefield/3.7a4pre

I am having an odd problem when D2D is enabled. When I open up Minefield so that it is sitting on the start page then type a web address in the awesome bar and hit "leftalt + enter" to open the link in a new tab the entire screen instantly goes black. I can still see and move the mouse cursor. I have to click CTRL+ALT+DELETE to get the screen to return to normal. I have tested this with a new profile with d2d on. This only seems to happen once per session.

I am running an Nvidia 260GT with genuine 196.21 drivers.

Reproducible: Sometimes

Steps to Reproduce:
1. Open Firefox and 
2. Type an address in the awesome bar 
3. hit "leftalt + enter" to open the address in a new tab
Actual Results:  
Black screen but everything functions as normal. If you hit "ctrl + alt + delete" the screen returns to normal

Expected Results:  
tab opens as normal

Afterwards, the page that was opened has a great deal of tearing when scrolling the page.
confirmed.  nvidia gtx260.

Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a4pre) Gecko/20100319 Minefield/3.7a4pre - Build ID: 20100319040017
Happens here as well with an Nvidia Geforce 8800GTS 512 while using the same build.
Status: UNCONFIRMED → NEW
Component: General → Graphics
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → thebes
Version: unspecified → Trunk
Blocks: d2d
That's pretty weird... Confirmed, I have the same issue.
Assignee: nobody → bas.schouten
Status: NEW → ASSIGNED
Wow, I think I know what this is, it seems D3D by default makes Alt+Enter go to 'fullscreen mode' this blows up everything for us. It's easily disabled though so I'll take care of it.
We don't want DXGI to respond to events for us, we do fine handling them ourselves. This patch fixes the issue.
Attachment #434534 - Flags: review?(jmuizelaar)
Do we handle mode change events?
Comment on attachment 434534 [details] [diff] [review]
Do not let DXGI respond to events for us

This kind of stuff doesn't really belong in cairo backend. I think it would be more suited to the application. I suppose it might be better to wait for the cairo_device_t * before doing that. Still, we should have a comment about how this is a hack.
Attachment #434534 - Flags: review?(jmuizelaar) → review+
Pushed http://hg.mozilla.org/mozilla-central/rev/dedc4553ca01.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: