Bug 553603: Do not let DXGI handle window changes for us. r=jrmuizel